# declavatar2

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: check-rust-codes.yml
da2/: Cargo.toml
declavatar2/: Cargo.toml
declavatar2-dylib/: Cargo.toml
declavatar2/src/: core.rs  lib.rs  unity.rs  vrchat.rs
declavatar2/src/core/: resolution.rs  value_set.rs
declavatar2/src/unity/: animation.rs  animator.rs  state.rs  value.rs
declavatar2/src/vrchat/: expr_parameter.rs  state_behaviour.rs
