[workspace]
resolver = "2"
members = ["da2","declavatar2"]

[workspace.package]
version = "0.0.1"
description = "Declarative Avatar Asset Composing Tool; Revised"
authors = ["kb10uy <kb10uy@kb10uy.org>"]
edition = "2024"

[workspace.dependencies]
either = "1.16.0"
nalgebra = "0.35.0"
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
